# KOP2

./: .gitignore  CMakeLists.txt  MWSAT_data.csv  calibration.sh  check_valid.sh  compare.sh  eliminate_random.sh  find_opt.sh  heuristic_calibration.sh  main.cpp  plot_calibration.py  random_plot.py  requirements.txt  rng_state  rng_state_dbg  zipper.sh
annealer/: CMakeLists.txt  annealer.cpp
annealer/include/annealer/: annealer.hpp  initial_config.hpp  measured_performance.hpp  utils.hpp
cnf_parser/: CMakeLists.txt  cnf_parser.cpp
cnf_parser/include/cnf_parser/: cnf_define.hpp  cnf_parser.hpp
cnf_structs/: CMakeLists.txt  clause.cpp  formula.cpp  literal.cpp
cnf_structs/include/cnf_structs/: clause.hpp  formula.hpp  literal.hpp
rng_wrapper/: CMakeLists.txt  rng_wrapper.cpp
rng_wrapper/config/: seed
rng_wrapper/include/rng_wrapper/: rng_wrapper.hpp
rng_wrapper/rng/: CMakeLists.txt  Makefile  rngctrl.cpp  rngstart.c  rngstub.c  xoshiro256plus.cpp
rng_wrapper/rng/include/rng/: rngctrl.h  xoshiro256plus.h
